apps/frigate/templates/cilium-node-probe-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-node-health-probes
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: frigate
  ingress:
    - fromEntities: [host, remote-node]
      toPorts:
        - ports:
            - port: "5000"
              protocol: TCP
